-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 26
-
Component/s: hotspot
-
b03
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8374410 | 26.0.1 | David Holmes | P3 | Resolved | Fixed | b01 |
| JDK-8373943 | 26 | David Holmes | P3 | Resolved | Fixed | b29 |
| JDK-8375613 | 25.0.3-oracle | Ivan Bereziuk | P3 | Resolved | Fixed | b02 |
| JDK-8376317 | 25.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8375614 | 21.0.11-oracle | Ivan Bereziuk | P3 | Resolved | Fixed | b02 |
| JDK-8376342 | 21.0.11 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
----------System.out:(1/466)----------
OK - got expected exception: java.lang.IllegalAccessError: class HostNoNestMember tried to access private field HostNoNestMember$Member.value (HostNoNestMember and HostNoNestMember$Member are in unnamed module of loader java.net.URLClassLoader @101df177), (Type HostNoNestMember$Member (loader: java.net.URLClassLoader @101df177) is not a nest member of type HostNoNestMember (loader: java.net.URLClassLoader @101df177): current type is not listed as a nest member)
----------System.err:(10/538)----------
java.lang.Error: Unexpected interrupt
at TestNestHostErrorWithMultiThread.main(TestNestHostErrorWithMultiThread.java:63)
at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
at java.base/java.lang.reflect.Method.invoke(Method.java:565)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:335)
at java.base/java.lang.Thread.run(Thread.java:1516)
There is only one printout of "OK ..." where there should be two. Investigation by [~jpai] suggests that jtreg will interrupt threads if it detects an uncaught exception from a test thread. Unfortunately this uncaught exception does not appear to be being logged to the test log.
- backported by
-
JDK-8373943 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
-
JDK-8374410 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
-
JDK-8375613 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
-
JDK-8375614 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
-
JDK-8376317 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
-
JDK-8376342 Test runtime/Nestmates/membership/TestNestHostErrorWithMultiThread.java failed: Unexpected interrupt
-
- Resolved
-
- caused by
-
JDK-8365526 Crash with null Symbol passed to SystemDictionary::resolve_or_null
-
- Resolved
-
- duplicates
-
JDK-8373462 Crash: assert(UTF8::is_legal_utf8((const unsigned char*)msg, strlen(msg), true)) failed: must be
-
- Closed
-
- relates to
-
CODETOOLS-7904119 Improve diagnostics when jtreg interrupts test threads
-
- Open
-
- links to
-
Commit(jdk26)
openjdk/jdk/a2111b0c
-
Commit(master)
openjdk/jdk21u-dev/4a328b9f
-
Commit(master)
openjdk/jdk25u-dev/3a3eb65c
-
Commit(master)
openjdk/jdk/1748737b
-
Review(jdk26)
openjdk/jdk/28882
-
Review(master)
openjdk/jdk21u-dev/2570
-
Review(master)
openjdk/jdk25u-dev/173
-
Review(master)
openjdk/jdk/28817