src/hotspot/share/classfile/systemDictionary.cpp
@@ -1873,9 +1873,14 @@ void SystemDictionary::add_nest_host_error(const constantPoolHandle& pool,
       // An existing entry means we had a true resolution failure (LinkageError) with our nest host, but we
       // still want to add the error message for the higher-level access checks to report. We should
       // only reach here under the same error condition, so we can ignore the potential race with setting
-      // the message, and set it again.
-      assert(entry->nest_host_error() == nullptr || strcmp(entry->nest_host_error(), message) == 0, "should be the same message");
-      entry->set_nest_host_error(message);
+      // the message.
+      const char* nhe = entry->nest_host_error();
+      if (nhe == nullptr) {
+        entry->set_nest_host_error(message);
+      }
+      else {
+        assert(strcmp(nhe, message) == 0, "New message %s, differs from original %s", message, nhe);
+      }
     }
   }
 }
